Fixed the row gap

--- a/src/styles/terminal/_projectsComponent.scss
+++ b/src/styles/terminal/_projectsComponent.scss
@@ -6,4 +6,5 @@
     padding: 2em 3em;
     overflow-y: scroll;
     height: 100%;
+    row-gap: 1.5em;
 }
