--- a/src/styles/terminal/projects/_ProjectCard.scss
+++ b/src/styles/terminal/projects/_ProjectCard.scss
@@ -4,6 +4,7 @@
     img {
         position: absolute;
         width: 100%;
+        height: auto;
         top: 0;
         bottom: 0;
     }
